Update and rename 2021-07-20-co zawsze mam w kuchni.md to 2021-07-20-zawsze.md

--- a/_posts/2021-07-20-zawsze.md
+++ b/_posts/2021-07-20-zawsze.md
@@ -1,4 +1,7 @@
-![IMG_20210804_185312](https://user-images.githubusercontent.com/87815121/128348956-c8d1e2c1-afca-4a91-986f-2370ca6b0581.jpeg)
+---
+title: Co zawsze mam w kuchni
+image: 'https://user-images.githubusercontent.com/87815121/128348956-c8d1e2c1-afca-4a91-986f-2370ca6b0581.jpeg'
+---
 
 Staram się generować jak najmniej odpadów. W 2020 roku wyrzuciłam najmniej jedzenia w swoim życiu, a w 2021 idę na rekord. Wyrzucam tylko kompost - jeśli już naprawdę nie ma dla niego zastosowania. Gotuję codziennie. Jeśli na przykład kupię za dużo fasolki szparagowej, to ta fasolka pojawia się w każdym daniu przez kilka dni, ale codziennie w innej odsłonie. Raz w tygodniu robię zakupy, które polegają na uzupełnieniu **zawsze potrzebnych** produktów. Wiele razy w przeszłości zdarzyło mi się zachwycić jakimś przepisem i kupić coś, co później nie przydało mi do żadnego dania i po kilku tygodniach lądowało w koszu. Teraz jestem już dorosła i rozsądna. Kiedy mam w kuchni "co poniżej", zawsze udaje mi się coś ugotować. 
 
